scripts/nullaway/annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8.txt
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/Graph.java:29: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return _primaryNode;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/Edge.java:43: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return _to;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/TulipExporter.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
    private PrintStream ostream = null;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/AbstractSimpleExporter.java:74: error: [NullAway] unboxing of a @Nullable value
        	if (point.hasAttr(Named.SYMBOL) && (Boolean)point.getAttr(Named.SYMBOL)) {
        	                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/NodeArray.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
        _elements = inlineValues ? new GraphPoint[length] : null;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/ExporterUtils.java:12: error: [NullAway] dereferenced expression path is @Nullable
        int dotIdx = path.lastIndexOf('.');
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/GraphMLExporter.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	private PrintStream ostream = null;
	                    ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/GraphVizExporter.java:47: error: [NullAway] unboxing of a @Nullable value
        	if (point.hasAttr(Named.SYMBOL) && (Boolean)point.getAttr(Named.SYMBOL)) {
        	                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/SimpleGraphVizExporter.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
	private PrintStream ostream = null;
	                    ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/ExporterStub.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return _g;
		^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/ReflectiveBuilder.java:17: error: [NullAway] unboxing of a @Nullable value
		final int generation = (Integer)options.get(BuilderOptions.GENERATION);
		                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/internal/NodeBuilder.java:47: error: [NullAway] unboxing of a @Nullable value
		final int generation = (Integer)options.get(BuilderOptions.GENERATION);
		                       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
12 errors
